--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
             "dest":"/"
         },
         {
-            "src":"/api",
-            "dest":"/index.js",
+            "src":"/api/userdetail/getuserdetail",
+            "dest":"/controller/userdetailscontroller.js",
             "methods":["GET","POST"]
         }
     ]
